formato uniforme automatico a todo el codigo por el eclipse